--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.1",
     "firebase": "^10.8.0",
     "formik": "^2.4.5",
+    "lucide-react": "^0.343.0",
     "mdb-react-ui-kit": "^7.2.0",
     "mongoose": "^8.2.0",
     "react": "^18.2.0",
