--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mdb-react-ui-kit": "^7.2.0",
     "mongoose": "^8.2.0",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
