--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@jitsi/react-sdk": "^1.4.0",
+    "@reach/combobox": "^0.18.0",
+    "@react-aria/combobox": "^3.9.1",
+    "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.1",
     "@syncfusion/ej2": "^24.2.8",
     "@syncfusion/ej2-react-grids": "^24.2.8",
+    "@types/reach__combobox": "^0.4.0",
+    "@types/styled-components": "^5.1.34",
     "axios": "^1.6.7",
     "dotenv": "^16.4.1",
     "firebase": "^10.8.0",
@@ -34,6 +39,8 @@
     "react-router-dom": "^6.22.3",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.5",
+    "styled-components": "^6.1.11",
+    "use-places-autocomplete": "^4.0.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
